--- a/configs/training/generator/dar_titok_l32.yaml
+++ b/configs/training/generator/dar_titok_l32.yaml
@@ -35,7 +35,8 @@ model:
         class_label_dropout: 0.1
         image_seq_len: ${model.vq_model.num_latent_tokens}
         condition_num_classes: 1000
-
+        rope_type: "none"
+        
         # sampling hyper-params for RAR-B
         randomize_temperature: 1.0
         guidance_scale: 3.0
