--- a/configs/rear_s.yaml
+++ b/configs/rear_s.yaml
@@ -1,6 +1,6 @@
 experiment:
-    project: "qar_generation"
-    name: "qar-b"
+    project: "reAR"
+    name: "rear-s"
     max_train_examples: 1_281_167
     save_every: 50_000
     eval_every: 50_000
@@ -8,7 +8,7 @@ experiment:
     log_every: 50
     log_grad_norm_every: 1_000
     resume: True
-    tokenizer_checkpoint: "/home/ubuntu/ckpt/maskgitvq.bin"
+    tokenizer_checkpoint: "ckpt/maskgitvq.bin"
 
 model:
     vq_model:
@@ -17,41 +17,40 @@ model:
         token_size: 256
         num_latent_tokens: 256
         finetune_decoder: False
-        pretrained_tokenizer_weight: "maskgit-vqgan-imagenet-f16-256.bin"
+        pretrained_tokenizer_weight: "ckpt/maskgit-vqgan-imagenet-f16-256.bin"
     
     generator:
         hidden_size: 768
-        num_hidden_layers: 24
+        num_hidden_layers: 20
         num_attention_heads: 16
         intermediate_size: 3072
         dropout: 0.1
         attn_drop: 0.1
         class_label_dropout: 0.1
-        image_seq_len: ${model.vq_model.num_latent_tokens}
+        image_seq_len: 256
         condition_num_classes: 1000
-        
-        # sampling hyper-params for RAR-B
+
         randomize_temperature: 1.0
-        guidance_scale: 16.0
+        guidance_scale: 22.0
         guidance_scale_pow: 2.75
-        num_steps: 256
         use_checkpoint: False # True to save memory
-        kv_cache: False
+        kv_cache: True
 
-        randomness_anneal_start: 10000000 # Never touch
-        randomness_anneal_end: 10000000 # Never touch
-
-losses:
-    label_smoothing: 0.1
-    loss_weight_unmasked_token: 0.1
-    is_diffusion: False
+        perturb_mode: "switch"
+        randomness_anneal_start: 0
+        randomness_anneal_end: 187500
+        
+        transition_alignment: True
+        transition_alignment_weight: 1.0
+        encode_align_layer_idx: 0
+        decode_align_layer_idx: 15 # 3/4 of the full model
 
 dataset:
     params:
         # use pretokenized dataset for speed-up
-        pretokenization: "/home/ubuntu/dataset/pretokenized/maskgitvq.jsonl"
-        train_shards_path_or_url: "imagenet_sharded/train/imagenet-train-{0000..1023}.tar"
-        eval_shards_path_or_url: "imagenet_sharded/val/imagenet-val-{0000..0063}.tar"
+        pretokenization: "dataset/pretokenized/maskgitvq.jsonl"
+        train_shards_path_or_url: "dataset/imagenet_sharded/train/imagenet-train-{0000..1023}.tar"
+        eval_shards_path_or_url: "dataset/imagenet_sharded/val/imagenet-val-{0000..0063}.tar"
         num_workers_per_gpu: 12
     preprocessing:
         resize_shorter_edge: 256
@@ -62,7 +61,7 @@ dataset:
 optimizer:
     name: adamw 
     params:
-        learning_rate: 1e-4
+        learning_rate: 4e-4
         beta1: 0.9
         beta2: 0.96
         weight_decay: 0.03
@@ -77,7 +76,7 @@ lr_scheduler:
 
 training:
     gradient_accumulation_steps: 1
-    per_gpu_batch_size: 64 # 32 GPU, total batch size 2048
+    per_gpu_batch_size: 256 # 8 GPU, total batch size 2048
     mixed_precision: "bf16"
     enable_tf32: True
     enable_wandb: True
